<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- activity_login -->
    <string name="cont_inv"></string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="contrasena">contraseña</string>

    <!-- activity_menu -->
    <string name="arm_pedido">ARMAR PEDIDO</string>
    <string name="consultar_pedido">CONSULTAR ESTADO PEDIDO</string>
    <string name="opciones_bodega">PUNTO DE REPARTO</string>
    <string name="selecciona_pedido">Selecciona un pedido:</string>
    <string name="registro">REGISTRO</string>

    <!-- activity_info_pedido -->
    <string name="codigo_pedido">ID pedido : </string>
    <string name="fecha_pedido">Fecha pedido : </string>
    <string name="direccion_pedido">Direccion: </string>
    <string name="codigobarra_pedido">Código de barra : </string>
    <string name="asociar_tag">Asociar etiqueta</string>
    <string name="asociar_foto">Asociar foto</string>
    <string name="asociar_repartidor">Repartidor:</string>
    <string name="codigo_barras">Código de barras: </string>
    <string name="finalizar">Armado Finalizado</string>
    <string name="cancelar">Cancelar Pedido</string>

    <!-- activity_info_pedido_repartidor -->
    <string name="finalizarRuta">Finalizar entrega</string>
    <string name="iniciarRuta">Iniciar entrega</string>
    <string name="cancelarRuta">Cancelar entrega</string>

    <!-- activity_config_punto_reparto_admin -->
    <string name="punto_reparto">Seleccione un punto de reparto</string>

    <!-- activity_consultar_estado_pedido -->
    <string name="pedidoConsultar">Ingrese el Código del pedido</string>
    <string name="pedidoConsultarInput">código del pedido</string>
    <string name="errorConsultar">No se encontró información de ese pedido. \nRevise el código e intente nuevamente.</string>
    <string name="pedidoEncontrado">"Pedido encontrado."</string>
    <string name="estadoPedido">Estado pedido : </string>
    <string name="RepartidorPedido">Repartidor Asignado : </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_armar_pedidos">Armar pedidos</string>
    <string name="title_activity_pedido_item">Detalle pedido</string>
    <string name="title_activity_info_pedido">Información pedido</string>
    <string name="title_activity_consultar_estado_pedido">ConsultarEstadoPedido</string>
    <string name="title_activity_listar_pedidos">Lista de pedidos</string>

    <!-- registro -->
    <string name="name">nombre</string>
    <string name="email">correo electrónico</string>
    <string name="password">contraseña</string>
    <string name="phone">teléfono</string>
    <string name="userzone">zona de usuario</string>
    <string name="address">dirección</string>
    <string name="rol">rol</string>
    <string name="registrar">registrar</string>

</resources>
