<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="25dp"
    android:background="@drawable/main_background">

    <TextView
        android:text="@string/codigo_pedido"
        android:typeface="monospace"
        android:textColor="@color/texto_sin_opac"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editcodigo"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/editfecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/fecha_pedido"
        android:textColor="@color/texto_sin_opac"
        android:textSize="16sp"
        android:layout_below="@id/editcodigo"
        android:inputType="date"
        android:layout_margin="5dp"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/asignarCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/color_botones"
            android:onClick="AsociarTag"
            android:text="@string/asociar_tag" />

        <Button
            android:id="@+id/asociarFoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/color_botones"
            android:onClick="tomarFoto"
            android:text="@string/asociar_foto" />

    </LinearLayout>

    <ListView
        android:id="@+id/listadetallepedidos"
        android:layout_width="match_parent"
        android:layout_height="249dp"
        android:layout_below="@id/editfecha"
        android:layout_margin="5dp"
        android:clickable="true"
        android:textColor="@color/texto_sin_opac">

    </ListView>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/viewRepartidor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asociar_repartidor"
            android:textSize="16sp"
            android:textColor="@color/opciones_menu"/>

        <Spinner
            android:id="@+id/spinnerRepartidor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:background="@color/fondo_lista"
            android:textColor="@color/opciones_menu"
            android:textSize="16sp"
            android:padding="10dp"/>
    </LinearLayout>



    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/finalizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="finalizar"
            android:background="@color/color_botones"
            android:text="@string/finalizar"
            android:enabled="false"/>

    </LinearLayout>



</LinearLayout>


