<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <TextView
        android:text="@string/codigo_pedido"
        android:typeface="monospace"
        android:textColor="@color/texto_sin_opac"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editcodigo"
        android:layout_margin="5dp"/>
    <TextView
        android:text="Cliente: "
        android:typeface="monospace"
        android:textColor="@color/texto_sin_opac"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cliente_tv"
        android:layout_margin="5dp"/>
    <TextView
        android:text="Fecha pedido:"
        android:typeface="monospace"
        android:textColor="@color/texto_sin_opac"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fechaPedido_tv"
        android:layout_margin="5dp"/>

    <TextView
        android:text="Dirección: "
        android:typeface="monospace"
        android:textColor="@color/texto_sin_opac"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/direccion_tv"
        android:layout_margin="5dp"/>

    <TextView
        android:text="@string/codigo_barras"
        android:typeface="monospace"
        android:textColor="@color/texto_sin_opac"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cod_barras_tv"
        android:layout_margin="5dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/iniciarRuta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/color_botones"
            android:onClick="iniciarRuta"
            android:text="@string/iniciarRuta" />

        <Button
            android:id="@+id/finalizarRuta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/color_botones"
            android:enabled="false"
            android:onClick="finalizarRuta"
            android:text="@string/finalizarRuta" />

        <Button
            android:id="@+id/cancelarRuta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/color_botones"
            android:enabled="false"
            android:onClick="AsociarTag"
            android:text="@string/cancelarRuta" />

    </LinearLayout>


</LinearLayout>



