<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/main_background"
    tools:context="ec.edu.espol.cvr.paipayapp.MenuAdmin">

    <ImageButton
        android:id="@+id/img_armar_pedido"
        android:onClick="armar_pedidos"
        android:background="@drawable/armar_pedido"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="20dp" />

    <TextView
        android:id="@+id/armar_pedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_armar_pedido"
        android:textStyle="bold"
        android:textSize="15sp"
        android:fontFamily="sans-serif-smallcaps"
        android:textColor="@color/opciones_menu"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/arm_pedido"
        android:typeface="monospace"
        android:onClick="armar_pedidos"/>

    <ImageButton
        android:id="@+id/img_consultar_pedido"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@id/armar_pedido"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/consultar"
        android:onClick="consultar_pedido" />

    <TextView
        android:id="@+id/consultar_pedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_consultar_pedido"
        android:layout_centerHorizontal="true"
        android:text="@string/consultar_pedido"
        android:textColor="@color/opciones_menu"
        android:layout_marginBottom="15dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:fontFamily="sans-serif-smallcaps"
        android:typeface="monospace"
        android:onClick="consultar_pedido"/>

    <ImageButton
        android:id="@+id/img_opciones_bodega"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@id/consultar_pedido"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/configuracion"
        android:onClick="opciones_bodega" />

    <TextView
        android:id="@+id/opciones_bodega"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_opciones_bodega"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/opciones_bodega"
        android:textColor="@color/opciones_menu"
        android:textStyle="bold"
        android:textSize="15sp"
        android:fontFamily="sans-serif-smallcaps"
        android:typeface="monospace"
        android:onClick="opciones_bodega"/>

    <ImageView
        android:id="@+id/login_registro"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:onClick="registro"
        android:layout_below="@id/opciones_bodega"
        android:layout_centerHorizontal="true"
        android:src="@drawable/login_registro" />

    <TextView
        android:id="@+id/registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_registro"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/registro"
        android:onClick="registro"
        android:textColor="@color/opciones_menu"
        android:textStyle="bold"
        android:textSize="15sp"
        android:fontFamily="sans-serif-smallcaps"
        android:typeface="monospace" />

</RelativeLayout>
